# nsiqcppstyle

./: .gitignore  README.md  ReleaseNote.txt  TODO  filefilter.txt  install.sh  nsiqcppstyle  nsiqcppstyle.py  nsiqcppstyle_checker.py  nsiqcppstyle_exe.py  nsiqcppstyle_lexer.py  nsiqcppstyle_outputer.py  nsiqcppstyle_reporter.py  nsiqcppstyle_rulehelper.py  nsiqcppstyle_rulemanager.py  nsiqcppstyle_state.py  nsiqcppstyle_types.py  nsiqcppstyle_util.py  pyproject.toml  rapport.txt  run_rule_unittest.sh  trace-callbacks.bat  trace-callbacks.py  trace-callbacks.sh
.github/workflows/: lint.yml  tests.yml
nsiqunittest/: nsiqcppstyle_unittest.py  nsiqcppstyle_unittestbase.py  nsiqcppstyle_update_unittest.py
nsiqunittest/resx/: example.cpp  filefilter.example.txt
rules/: RULE_10_1_A_do_not_use_bufferoverflow_risky_function_for_unix.py  RULE_10_1_B_do_not_use_bufferoverflow_risky_function_for_windows.py  RULE_11_A_add_class_scope_in_fn_declarations_and_definitions.py  RULE_3_1_A_do_not_start_filename_with_underbar.py  RULE_3_2_B_do_not_use_same_filename_more_than_once.py  RULE_3_2_CD_do_not_use_special_characters_in_filename.py  RULE_3_2_F_use_representitive_classname_for_cpp_filename.py  RULE_3_2_H_do_not_use_underbars_for_cpp_filename.py  RULE_3_2_H_do_not_use_uppercase_for_c_filename.py  RULE_3_3_A_start_function_name_with_is_or_has_when_return_bool.py  RULE_3_3_A_start_function_name_with_lowercase_unix.py  RULE_3_3_A_start_function_name_with_upperrcase_windows.py  RULE_3_3_B_start_private_function_name_with_underbar.py  RULE_4_1_A_A_use_tab_for_indentation.py  RULE_4_1_A_B_use_space_for_indentation.py  RULE_4_1_B_indent_each_enum_item_in_enum_block.py  RULE_4_1_B_locate_each_enum_item_in_seperate_line.py  RULE_4_1_C_align_long_function_parameter_list.py  RULE_4_1_E_align_conditions.py  RULE_4_2_A_A_space_around_operator.py  RULE_4_2_A_B_space_around_word.py  RULE_4_4_A_do_not_write_over_120_columns_per_line.py  RULE_4_5_A_brace_for_namespace_should_be_located_in_seperate_line.py  RULE_4_5_A_braces_for_function_definition_should_be_located_in_seperate_line.py  RULE_4_5_A_braces_for_type_definition_should_be_located_in_seperate_line.py  RULE_4_5_A_braces_inside_of_function_should_be_located_in_end_of_line.py  RULE_4_5_A_indent_blocks_inside_of_function.py  RULE_4_5_A_matching_braces_inside_of_function_should_be_located_same_column.py  RULE_4_5_B_use_braces_even_for_one_statement.py  RULE_5_2_C_provide_doxygen_class_comment_on_class_def.py  RULE_5_2_C_provide_doxygen_namespace_comment_on_namespace_def.py  RULE_5_2_C_provide_doxygen_struct_comment_on_struct_def.py  RULE_5_3_A_provide_doxygen_function_comment_on_function_in_header.py  RULE_5_3_A_provide_doxygen_function_comment_on_function_in_impl.py  RULE_6_1_A_do_not_omit_function_parameter_names.py  RULE_6_1_E_do_not_use_more_than_5_paramters_in_function.py  RULE_6_1_G_write_less_than_200_lines_for_function.py  RULE_6_2_A_do_not_use_system_dependent_type.py  RULE_6_4_B_initialize_first_item_of_enum.py  RULE_6_5_B_do_not_use_lowercase_for_macro_constants.py  (+11 more)
tests/: test_file_filter.py
updateagent/: agent.py  minjson.py
